--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}" media="all" />
-<script src="{{ url_for('static', filename='nav.js') }}" type="text/javascript"> </script>
+<script src="{{ url_for('static', filename='js/nav.js') }}" type="text/javascript"> </script>
+<script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"> </script>
 
+<script src="{{ url_for('static',filename='js/jquery.min.js')}}" type="text/javascript"></script>
 <div class="top_nav">
 	<ul>
 		<li>
@@ -24,6 +26,7 @@
 </div>
 
 <div class="container">
+	<!--
 	{%for file in files %}
 	<div class="item">
 		<img src="{{ url_for('static', filename=file.extension) }}" class="thumbnail">
@@ -35,6 +38,24 @@
 		</div>
 	</div>
 	{% endfor %}
+	-->
 </div>
 
+
+
+{% raw %}
+<script type="text/template" id="item_template">
+	<div class='item'>
+		<img src='/static/icons/{{file_type}}.svg' class='thumbnail'>
+		<div class='item_description'>
+			<div class='item_name'>{{file_name}}</div>
+			<div class='button-div'>
+				<a href='uploads/{{file_name}}' class='download'>Download</a>
+			</div>
+		</div>
+    </div>
+    
+</script>
+
+{% endraw %}
 </html>
